--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Leadership Project</title>
+    <title>Leadership Connections</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <style>
       html {
