--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Leadership Connections</title>
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-amber.min.css" />
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <style>
       html {
         height: 100%;
@@ -29,10 +32,22 @@
         padding: 15px;
         background: #ecf0f1;
       }
+
+      #main {
+        min-height: auto;
+        align-items: center;
+      }
     </style>
 
   </head>
   <body>
-    <p>Hello World</p>
+    <form action="#">
+      <div id="main" class="mdl-card mdl-shadow--2dp ">
+        <div class="mdl-textfield mdl-js-textfield">
+          <input class="mdl-textfield__input" type="text" id="sample1">
+          <label class="mdl-textfield__label" for="sample1">Your name...</label>
+        </div>
+      </div>
+    </form>
   </body>
 </html>
