--- a/static/index.html
+++ b/static/index.html
@@ -7,15 +7,22 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-amber.min.css" />
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+
     <style>
       html {
         height: 100%;
         font-family: 'Raleway', sans-serif;
+
+        background: #1c92d2;
+        background: -webkit-linear-gradient(to bottom, #f2fcfe, #1c92d2);
+        background: linear-gradient(to bottom, #f2fcfe, #1c92d2);
+        /*
         background: url('background.jpg');
         background-position: 50%;
         background-attachment: fixed;
         background-size: cover;
         background-repeat: no-repeat;
+        */
       }
 
       body {
