create routers for classes and students

--- a/static/index.html
+++ b/static/index.html
@@ -76,7 +76,7 @@
     <script src="js/student-graph.js"></script>
     <script>
 
-      fetch('/students')
+      fetch('/student')
         .then((r) => r.json())
         .then(function(students) {
 
