--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-amber.min.css" />
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="https://unpkg.com/vue"></script>
 
     <style>
       html {
@@ -25,6 +26,10 @@
         */
       }
 
+      * {
+        box-sizing: border-box;
+      }
+
       body {
         margin: 0;
         height: 100%;
@@ -35,12 +40,11 @@
       }
 
       p {
-        font-size: 40px;
         padding: 15px;
         background: #ecf0f1;
       }
 
-      #main {
+      .mdl-card {
         min-height: auto;
         align-items: center;
       }
@@ -52,19 +56,60 @@
         right: 0;
         position: absolute;
       }
+      .mdl-button--file  input {
+        cursor: pointer;
+        height: 100%;
+        right: 0;
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        width: 300px;
+        z-index: 4;
+      }
+
+      .mdl-textfield--file  .mdl-textfield__input {
+        box-sizing: border-box;
+        width: calc(100% - 32px);
+      }
+      .mdl-textfield--file  .mdl-button--file {
+        right: 0;
+      }
+
+      #submit {
+        margin-top: 16px;
+        margin-bottom: 32px;
+      }
+
     </style>
 
   </head>
   <body>
     <div id="graph-container"></div>
-    <form action="#">
-      <div id="main" class="mdl-card mdl-shadow--2dp ">
+
+    <main id="app">
+      <div class="mdl-card mdl-shadow--2dp">
+
+        <p v-show="signup"> Looks like you haven't signed up yet, please upload a profile image and click the submit but to signup. </p>
+
         <div class="mdl-textfield mdl-js-textfield">
           <input class="mdl-textfield__input" type="text" id="sample1">
           <label class="mdl-textfield__label" for="sample1">Your name...</label>
         </div>
+
+        <div v-show="signup" class="mdl-textfield mdl-js-textfield mdl-textfield--file">
+          <input class="mdl-textfield__input" placeholder="Profile Picture" type="text" id="uploadFile" readonly/>
+          <div class="mdl-button mdl-button--primary mdl-button--icon mdl-button--file">
+            <i class="material-icons">photo_library</i><input type="file" id="uploadBtn">
+          </div>
+        </div>
+
+        <button v-show="signup" id="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+          Signup
+        </button>
+
       </div>
-    </form>
+
+    </main>
 
     <!-- 3rd Party Libs -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sigma.js/1.2.1/sigma.min.js" integrity="sha256-ii2D7w2jthCadZtIl2OjRn2vu1iEtGWcOrmd+UOZorc=" crossorigin="anonymous"></script>
@@ -76,14 +121,62 @@
     <script src="js/student-graph.js"></script>
     <script>
 
-      fetch('/student')
-        .then((r) => r.json())
-        .then(function(students) {
+      const data = {
+        signup: false,
+      };
 
-          new StudentGraph('graph-container', students);
-          console.log(students);
+const app = new Vue({
+  el: '#app',
+  data,
+});
 
-        });
+function addTypedEvent(el) {
+  let timerId = null;
+  const cb = () => el.dispatchEvent(new CustomEvent('typed', {detail: el.value}));
+  el.addEventListener('input', function() {
+    data.signup = false;
+    clearTimeout(timerId);
+    timerId = setTimeout(cb, 1000);
+  });
+}
+
+function getStudent({detail: name}) {
+
+  fetch(`/pairing?name=${name}`)
+    .then((r) => {
+      if (r.ok) return r;
+      const e = new Error();
+      e.response = r;
+      throw e;
+    })
+    .then((r) => r.json())
+    .then(function(pairings) {
+
+      console.log(pairings);
+
+    })
+    .catch(function(e) {
+
+      if (e.response.status === 404) {
+        data.signup = true;
+      }
+
+    });
+}
+
+const input = document.getElementById('sample1');
+addTypedEvent(input);
+input.addEventListener('typed', getStudent, true);
+
+
+fetch('/student')
+  .then((r) => r.json())
+  .then(function(students) {
+
+    new StudentGraph('graph-container', students);
+    console.log(students);
+
+  });
 
     </script>
   </body>
