--- a/static/index.html
+++ b/static/index.html
@@ -218,11 +218,11 @@
     <script src="js/student-graph.js"></script>
     <script>
 
-    //  fetch('/student')
-    //    .then((r) => r.json())
-    //    .then(function(students) {
-    //      new StudentGraph('graph-container', students);
-    //    });
+      fetch('/student')
+        .then((r) => r.json())
+        .then(function(students) {
+          new StudentGraph('graph-container', students);
+        });
 
       let typingTimer = null;
 
