add sather gate background

--- a/static/index.html
+++ b/static/index.html
@@ -16,13 +16,12 @@
         background: #1c92d2;
         background: -webkit-linear-gradient(to bottom, #f2fcfe, #1c92d2);
         background: linear-gradient(to bottom, #f2fcfe, #1c92d2);
-        /*
+
         background: url('background.jpg');
         background-position: 50%;
         background-attachment: fixed;
         background-size: cover;
         background-repeat: no-repeat;
-        */
       }
 
       * {
@@ -72,6 +71,10 @@
         left: 0;
         right: 0;
         position: absolute;
+        background: rgba(0, 0, 0, 0.5);
+        background: radial-gradient(ellipse at center, rgba(0,0,0,0.75) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0,0,0,0) 100%);
+        background: -webket-radial-gradient(ellipse at center, rgba(0,0,0,0.75) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0,0,0,0) 100%);
+
       }
 
       .mdl-button--file  input {
